--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/4.connect-to-the-oceanbase-database-through-odc-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/4.connect-to-the-oceanbase-database-through-odc-of-mysql-mode.md
@@ -8,7 +8,7 @@ ODC is deployed and you have obtained the URL of the web ODC. For more informati
 
 ## Procedure
 
-This topic takes the example of creating a private connection for a user tenant (mysql@tenant) in web ODC. Following these steps:
+This topic takes the example of creating a private connection for a user tenant (mysql@tenant) in web ODC. Follow these steps:
 
 1. On the logon page of ODC, enter your registered account, the password, and the verification code, and then click **Log On**. 
 
@@ -43,9 +43,10 @@ This topic takes the example of creating a private connection for a user tenant 
 
 4. Click **Save** to save the current configuration in the ODC connection list. Next time you log on to ODC, you can directly select the connection from the list. The connection configuration does not necessarily need to pass the connection test when you save the configuration. 
 
-   > **Note**
-   >
-   > Before you save the configuration, you can click **Test Connection** to test the database connection. If the database username and password are correct, the system returns a message indicating that the connection succeeded.
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>Before you save the configuration, you can click <b>Test Connection</b> to test the database connection. If the database username and password are correct, the system returns a message indicating that the connection succeeded.</p>
+   </main>
 
 ## Related topics
 
