--- a/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -15,7 +15,7 @@ In MySQL mode of OceanBase Database, a database is a collection of database obje
 
 Before you create a database, make sure that:
 
-* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Connection overview](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md). 
+* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Connect to OceanBase Database](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md). 
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
