--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md
@@ -8,7 +8,7 @@ This topic provides a Spring JPA connection example and tests the performance of
 <dependency>
    <groupId>com.alipay.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
 </dependency>
 <dependency>
    <groupId>org.springframework.data</groupId>
@@ -132,7 +132,7 @@ The following example shows the content of the configuration file:
 jdbc.driver=com.alipay.oceanbase.jdbc.Driver
 jdbc.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
 jdbc.username=admin
-jdbc.password=admin
+jdbc.password=******
 database.dialect=MYSQL
 dbcp.maxIdle=5
 dbcp.maxActive=40
@@ -152,7 +152,7 @@ The following example shows the content of the configuration file:
   <dependency>
    <groupId>com.alipay.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
   </dependency>
   <!-- The rest is omitted. -->
 ```
@@ -164,7 +164,7 @@ Configure the data source and JPA part in the configuration file as follows:
 ```java
 spring.datasource.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
 spring.datasource.username=admin@oracle
-spring.datasource.password=admin
+spring.datasource.password=******
 spring.datasource.driver-class-name=com.alipay.oceanbase.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -172,9 +172,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.Oracle12cDialect
 ```
 
-> **Notice**
->
-> In Oracle mode, set `spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect`. In MySQL mode, set the value to `org.hibernate.dialect.MySQL5Dialect` instead, or leave this parameter unspecified. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>In Oracle mode, set <code>spring.jpa.properties.hibernate.dialect</code> to <code>org.hibernate.dialect.Oracle12cDialect</code>. In MySQL mode, set the value to <code>org.hibernate.dialect.MySQL5Dialect</code> instead, or leave this parameter unspecified.</p>
+  </main>
 
 ## Test preparation
 
@@ -213,7 +214,7 @@ Test method:
     public void testInsert(){
         User user = new User();
         user.setId(1);
-        user.setUsername("Test data");
+        user.setUsername("测试数据");
         userDao.save(user);
     }
 ```
@@ -231,9 +232,9 @@ Enable the commented-out attribute of the User class and execute the following m
     public void testAlert(){
         User user = new User();
         user.setId(1);
-        user.setUsername("Test data");
-        user.setAddress("Beijing");
-        user.setSex("Male");
+        user.setUsername("测试数据");
+        user.setAddress("北京");
+        user.setSex("男");
         user.setBirthday(new Date());
         userDao.save(user);
     }
@@ -253,16 +254,16 @@ Test method:
 @Test
     public void testInsert(){
         List<User> list = new ArrayList<User>();
-        list.add(new User(3,"asd", new Date(), "Male", "Zhangzhou"));
-        list.add(new User(4,"qwe", new Date(), "Female", "Hangzhou"));
-        list.add(new User(5,"zxc", new Date(), "Male", "Shanghai"));
-        list.add(new User(6,"xcv", new Date(), "Female", "Hangzhou"));
-        list.add(new User(7,"sdf", new Date(), "Male", "Hangzhou"));
-        list.add(new User(8,"wer", new Date(), "Female", "Hangzhou"));
-        list.add(new User(9,"ert", new Date(), "Male", "Zhangzhou"));
-        list.add(new User(10,"rty", new Date(), "Female", "Shanghai"));
-        list.add(new User(11,"tyu", new Date(), "Male", "Hangzhou"));
-
+        list.add(new User(3,"asd", new Date(), "男", "漳州"));
+        list.add(new User(4,"qwe", new Date(), "女", "杭州"));
+        list.add(new User(5,"zxc", new Date(), "男", "上海"));
+        list.add(new User(6,"xcv", new Date(), "女", "杭州"));
+        list.add(new User(7,"sdf", new Date(), "男", "杭州"));
+        list.add(new User(8,"wer", new Date(), "女", "杭州"));
+        list.add(new User(9,"ert", new Date(), "男", "漳州"));
+        list.add(new User(10,"rty", new Date(), "女", "上海"));
+        list.add(new User(11,"tyu", new Date(), "男", "杭州"));
+        
         list.forEach(s -> userDao.save(s));
     }
 ```
@@ -323,12 +324,12 @@ Test method:
 @Test
     public void testChange(){
         Table_Test one = table_testDao.findOne("9996");
-        System.out.println("Before modification: "+one);
-        one.setVarchar2_test("Modified");
-        one.setNchar_test("Modified");
+        System.out.println("修改前："+one);
+        one.setVarchar2_test("已修改");
+        one.setNchar_test("已修改");
         table_testDao.save(one);
         one = table_testDao.findOne("9996");
-        System.out.println("After modification: "+one);
+        System.out.println("修改后："+one);
     }
 ```
 
