--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/12.connect-to-the-oceanbase-database-through-mybatis-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/12.connect-to-the-oceanbase-database-through-mybatis-of-oracle-mode.md
@@ -8,7 +8,7 @@ This topic describes how to configure dependencies and configuration files for a
 <dependency>
    <groupId>com.alipay.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
 </dependency>
 <dependency>
    <groupId>org.mybatis</groupId>
@@ -36,7 +36,7 @@ The following example shows the content of the configuration file:
                 <property name="driver" value="com.alipay.oceanbase.jdbc.Driver"/>
                 <property name="url" value="jdbc:oceanbase://10.100.xxx.xxx:18817/test?useUnicode=true&amp;characterEncoding=utf-8&amp;useServerPrepStmts=false&amp;useCursorFetch=true"/>
                 <property name="username" value="admin@mysql"/>
-                <property name="password" value="admin"/>
+                <property name="password" value="******"/>
             </dataSource>
         </environment>
     </environments>
