--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/2.tomcat-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/2.tomcat-connection-pool-configuration-example-of-oracle-mode.md
@@ -14,7 +14,7 @@ maxActive="100" //The maximum number of connections that a database can have on 
 maxIdle="30"    //The minimum number of connections that a database maintains on the server.
 maxWait="10000" //The maximum wait time. 10000 ms
 username="root"
-password=""
+password="******"
 driverClassName="com.oceanbase.jdbc.Driver"
 url="jdbc:oceanbase://10.100.xxx.xxx:18815/test?characterEncoding=UTF-8"/>
 ```
