--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/8.jdbc-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/8.jdbc-connection-pool-configuration-example-of-oracle-mode.md
@@ -40,7 +40,7 @@ This connection example involves the following configuration parameters:
 
    * Send the SQL text that contains a question mark (`?`) to the database server for preparation (`SQL_audit: request_type=5`).
 
-   * Execute the statement based on real values in the database (SQL_audit: request_type=6).`` 
+   * Execute the statement based on real values in the database (`SQL_audit: request_type=6`).`` 
 
 * `cachePrepStmts`: specifies whether to enable the PS cache to cache PreparedStatments to avoid repeated preparation on the client side and server side. `cachePrepStmts=TRUE` is applicable to scenarios where `useServerPrepStms` is set to `TRUE` and batch execution is performed repeatedly for the same SQL statement. Each batch execution contains the prepare operation and the setting of `executecachePrepStmts=TRUE`. This avoids repeated preparations. 
 
