--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/7.connect-to-the-oceanbase-database-through-spring-boot-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/7.connect-to-the-oceanbase-database-through-spring-boot-of-oracle-mode.md
@@ -212,7 +212,7 @@ public class App
 }
 ```
 
-Run the preceding code. If the following log is returned, it indicates that the startup is successful. 
+Run the preceding code. If the following log is returned, the startup is successful. 
 
 ![SpringBoot connection example](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V3.2.3/zh-CN/3.development-guide/4.database-design-specifications-and-practices/06.database-design-best-practices/02.development-framework-connection-database-example/01.springboot-connection-example/SpringBoot%20%E8%BF%9E%E6%8E%A5%E7%A4%BA%E4%BE%8B.png)
 
