--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/8.connect-to-the-oceanbase-database-through-spring-batch-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/8.connect-to-the-oceanbase-database-through-spring-batch-of-oracle-mode.md
@@ -35,7 +35,7 @@ This topic provides a Spring Batch connection example.
    <artifactId>spring-boot-starter-data-jpa</artifactId>
   </dependency>
 
-  <!--Other SpringBoot core dependencies are omitted here....-->
+  <!--Other Spring Boot core dependencies are omitted here....-->
 ```
 
 ## Configuration files
@@ -48,7 +48,7 @@ spring:
     driver-class-name: com.alipay.oceanbase.jdbc.Driver
 #    username: admin@mysql
     username: admin@oracle
-    password: admin
+    password: ******
   jpa:
     hibernate:
       ddl-auto: update
