--- a/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -12,15 +12,16 @@ A database table is a collection of two-dimensional arrays and represents and st
 
 <!-- For more information, see [Overview](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/2.table-of-oracle-mode/1.table-overview-of-oracle-mode.md).  -->
 
-## Preparations
+## Prerequisites
 
 Before you create a table, make sure that:
 
-* You have logged on to an Oracle tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md). 
+* You have logged on to an Oracle tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Connect to OceanBase Database](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md). 
 
-   > **Note**
-   >
-   > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
+  <main id="notice" type='explain'>
+   <h4>Note</h4>
+   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the <code>sys</code> tenant to confirm the mode of the tenant to which you have logged on.</p>
+  </main>
 
 * You have the `CREATE TABLE` privilege. For more information about how to view your privileges, see [View user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md). 
 
@@ -32,7 +33,7 @@ Use the [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax
 
 When you create a table, you must define a name for it. Observe the following requirements when you define a table name:
 
-* In MySQL mode of OceanBase Database, the name of each table must be unique in the database. 
+* In Oracle mode of OceanBase Database, the name of each table must be unique in the database. 
 
 * Use table names with meanings and avoid such names as `table1`. 
 
@@ -51,7 +52,7 @@ Observe the following requirements when you define columns for a table:
 
 * Select a proper data type for the data to be stored in columns. 
 
-* For more information about the data types supported in Oracle mode of OceanBase Database, see [Overview](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md). 
+* For more information about the data types supported in Oracle mode of OceanBase Database, see [Overview of data types](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md). 
 
 * For string data, we recommend that you use a variable-length string data type and specify the maximum length. Make sure that the maximum length specified is greater than the maximum number of characters to store. This is to avoid character truncation when the maximum length is exceeded. 
 
@@ -333,7 +334,7 @@ obclient [SYS]> CREATE TABLE tbl2_l (col1 NUMBER,col2 DATE)
 Query OK, 0 rows affected
 ```
 
-In this example, the `col1` column is the partitioning key. The `tbl2_l` table is partitioned based on the value ranges defined by `100 and 200`. 
+In this example, the `col1` column is the partitioning key. The `tbl2_l` table is partitioned based on the value ranges defined by `100` and `200`. 
 
 **HASH partitioning**
 
@@ -430,9 +431,10 @@ obclient [SYS]> SELECT table_name,partition_name,subpartition_name FROM USER_TAB
 
 In this example, HASH partitioning is used to subpartition the table without specifying the subpartition names. The system automatically generates the partitions `p0`, `p1`, `p2`, `p3`, and `p4` based on the partition naming rules. The subpartitions of partition `p0` are `p0smp1`, `p0smp2`, and `p0smp3` according to the subpartition naming rules for template-based partitioning. 
 
-> **Notice**
->
-> If you use HASH partitioning to subpartition a table by specifying the number of subpartitions, such as `SUBPARTITIONS 5`, you do not need to specify the `SUBPARTITION TEMPLATE` keyword when you create a subpartitioned table by using a template. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>If you use HASH partitioning to subpartition a table by specifying the number of subpartitions, such as <code>SUBPARTITIONS 5</code>, you do not need to specify the <code>SUBPARTITION TEMPLATE</code> keyword when you create a subpartitioned table by using a template.</p>
+  </main>
 
 Example 12: Create a LIST-HASH-subpartitioned table without using a template. 
 
@@ -455,7 +457,7 @@ Query OK, 0 rows affected
 
 In this example, a subpartitioned table is created without using the `SUBPARTITION TEMPLATE` keyword or a template. For a non-template-based subpartitioned table, you can define the subpartitioning method for each partition. You can choose whether to use the same subpartitioning method for different partitions. In this example, the table is partitioned by using LIST partitioning and then subpartitioned by using HASH partitioning. 
 
-## Subsequent operations
+## What to do next
 
 * [Create an index](3.create-a-index-of-oracle-mode.md)
 
