--- a/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
@@ -6,12 +6,12 @@ After you create a table, you can use the `INSERT` statement or other statements
 
 Before you insert data, make sure that:
 
-* You have logged on to an Oracle tenant of OceanBase Database. For more information, see [Connect to the database](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md).
+* You have logged on to an Oracle tenant of OceanBase Database. For more information, see [Connect to the OceanBase Database](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md).
 
 <main id="notice" type='explain'>
    <h4>Note</h4>
-   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the sys tenant for the mode of the tenant that you have logged on to.<code></code>  </p>
-  </main>
+   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the sys tenant for the mode of the tenant that you have logged on to.</p>
+</main>
 
 * You have the `INSERT` privilege on the target table. For more information about how to view the privileges of the current user, see [View user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md). If you do not have the required privileges, request the administrator to grant the privileges. For more information, see [Modify user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md).
 
@@ -19,7 +19,7 @@ Before you insert data, make sure that:
 
 Use the [INSERT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md) statement to insert data into a table.
 
-`Syntax`:
+Syntax:
 
 ```sql
 INSERT INTO table_name (list_of_columns) VALUES (list_of_values);
@@ -48,13 +48,13 @@ INSERT INTO table_name (list_of_columns) VALUES (list_of_values);
    2 rows in set
    ```
 
-   * For a NOT NULL column:
+   * For a `NOT NULL` column:
 
       * If the column has a default value, you can choose not to specify a value for this column when you insert data. The system will insert the default value into this column.
 
       * If the column has no default value, you must specify a value for the column when you insert data.
 
-   * For a NULL column, you can choose not to specify a value for this column when you insert data. The system will insert a NULL value into this column.
+   * For a `NULL` column, you can choose not to specify a value for this column when you insert data. The system will insert a `NULL` value into this column.
 
 * Before you insert data, we recommend that you learn about the constraints defined on columns of the table to avoid errors when you insert data.
 
@@ -165,7 +165,7 @@ In a batch processing task, a large number of `INSERT` operations may need to be
 
 The current OceanBase Database version allows you to use DBLink to write data into OceanBase Database in Oracle mode and Oracle databases.
 
-Example: Use DBLink to insert the `(11,11)` row into the `t1` table of the remote database.
+Example: Use DBLink to insert the `(11,11)` row into the `t1` table of a remote database.
 
 ```shell
 obclient> SELECT * FROM t1@ob_dblink;
@@ -192,7 +192,7 @@ obclient> SELECT * FROM t1@ob_dblink;
 2 rows in set
 ```
 
-## References
+## Related topics
 
 * [Update data](2.update-data-of-oracle-mode.md)
 
@@ -200,4 +200,4 @@ obclient> SELECT * FROM t1@ob_dblink;
 
 * [Replace data](4.replace-data-of-oracle-mode.md)
 
-* [Modify data in the remote database by using DBLink](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
+* [Use a DBLink to modify data in a remote database](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
