--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
@@ -2,15 +2,13 @@
 
 A query is a SELECT statement that retrieves data from one or more tables or views. 
 
-Syntax for the simplest SQL query statement:
+The syntax of an SQL statement typically takes the following form:
 
 ```javascript
 SELECT select_list FROM table_list;
 ```
 
-* In the syntax, `select_list` specifies the columns, functions, constants, or variables from `table_list`. 
-
-* Constants, or variables from the `table_list` variable that follows. 
+* In the syntax, `select_list` indicates the columns to be retrieved from `table_list`. However, it can also include functions, character constants, computed variables, and so on.
 
 * `table_list` specifies the tables or views that contain the data to be selected. 
 
@@ -19,7 +17,7 @@ The preceding example is a simple SQL query statement. `table_list` can also be 
 Note that in an Oracle tenant, `table_list` can be replaced with a DUAL table, which is a dummy table. In this case, `select_list` does not specify a specific column. Instead, it is a constant or variable. See the following example SQL statement:
 
 ```javascript
-$obclient -h10.0.0.0 -utpcc@t_oracle0_91#obdoc -P2883 -p**1*** tpcc
+$obclient -h10.0.0.0 -utpcc@t_oracle0_91#obdoc -P2883 -p****** tpcc
 obclient> select 'Medium', 6*6 from dual;
 +-------+-----+
 | 'Medium'  | 6*6 |
