--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/2.single-table-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/2.single-table-query-of-oracle-mode.md
@@ -36,7 +36,7 @@ If you use the `WHERE`, `GROUP BY`, `HAVING`, `ORDER BY`, and `LIMIT` keywords i
 
 8. The `ROWNUM` clause is executed to limit the number of records displayed per page. 
 
-Take note of the difference between the `WHERE` and `HAVING` clauses. The `WHERE` clause filters data before grouping or aggregation, whereas the `HAVING` clause filters data after grouping and returns the entire SQL query result. 
+The difference between the `WHERE` and `HAVING` clauses is that the `WHERE` clause filters data before grouping or aggregation, whereas the `HAVING` clause filters data after grouping and returns the entire SQL query result. 
 
 ## SELECT queries
 
@@ -139,16 +139,16 @@ obclient> SELECT empname,deptno FROM emp;
 
    ```sql
    obclient> SELECT empname AS Employee name, deptno AS Department No. FROM emp;
-   +--------------+--------------+
-   | Employee name     | Department No.     |
-   +--------------+--------------+
-   | SMITH        |           20 |
-   | ALLEN        |           35 |
-   | JONES        |           40 |
-   | BLAKE        |           30 |
-   | SCOTT        |           25 |
-   | FORD         |           45 |
-   +--------------+--------------+
+   +--------------+---------------+
+   | Employee name| Department No.|
+   +--------------+---------------+
+   | SMITH        |            20 |
+   | ALLEN        |            35 |
+   | JONES        |            40 |
+   | BLAKE        |            30 |
+   | SCOTT        |            25 |
+   | FORD         |            45 |
+   +--------------+---------------+
    6 rows in set
    ```
 
@@ -226,5 +226,5 @@ obclient> SELECT empname, sal-100, LOWER(job) FROM emp;
 6 rows in set
 ```
 
-In addition, you can use the `WHERE` condition to query specified columns. For more information, see [Conditional queries](4.sort-query-of-oracle-mode.md).
-For more information, see [Use operators and functions in queries](9.execution-plan-of-oracle-mode/1.view-query-execution-plan-of-oracle-mode.md). 
+In addition, you can use the `WHERE` condition to query specified columns. For more information, see [Conditional queries](3.condition-query-of-oracle-mode.md).
+For more information, see [Use operators and functions in queries](./8.use-operators-and-functions-in-query-for-oracle-mode/1.use-arithmetic-operator-in-query-of-oracle-mode.md). 
