--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/3.condition-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/3.condition-query-of-oracle-mode.md
@@ -30,7 +30,7 @@ The following table lists general query conditions specified by the `WHERE` clau
 
 ## Queries with comparison operators
 
-Comparison operators include equal to (`=`), greater than (`>`), less than (`<`), greater than or equal to (`>=`), less than or equal to (`<=`), and not equal to (`!=` and `<>`). 
+Comparison operators include equal to (`=`), greater than (`>`), less than (`<`), greater than or equal to (`>=`), less than or equal to (`<=`), and not equal to (`!=`) and (`<>`). 
 
 ### Equal to (=)
 
@@ -116,9 +116,10 @@ SELECT column_name [,column_name...] FROM table_name WHERE column_name < const_v
 SELECT column_name [,column_name...] FROM table_name WHERE column_name > const_value;
 ```
 
-> **Note**
->
-> The equal to or greater than (>=) and equal to or less than (<=) operators operate in a similar manner. 
+<main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p>The equal to or greater than (>=) and equal to or less than (<=) operators operate in a similar manner.</p>
+</main>
 
 Example:
 
@@ -224,13 +225,23 @@ The predicate `LIKE` matches strings. Syntax:
 [NOT] LIKE pattern
 ```
 
-The LIKE predicate searches the specified attribute columns and returns the tuples that match the specified pattern. The pattern can be a complete string or contain wildcards such as `%` and `_`. Notes:
+The LIKE predicate searches the specified attribute columns and returns the tuples that match the specified pattern. The pattern can be a complete string or contain wildcards such as `%` and `_`. Note that:
 
 * The underscore (_) exactly matches any character in the value. 
 
 * The percent sign (%) matches zero or multiple characters in the value. The pattern "%" cannot match `NULL`. 
+  
+<main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>In the Oracle mode of the OceanBase Database, the <code>like</code> operator is replaced with <code>=</code> when the following conditions are met:</p>
+    <p>
+     <ul>
+      <li><code>pattern</code> does not contain the wildcard characters <code>%</code> or <code>_</code>, and does not have an <code>escape</code> character.</li> <li>The column type is not <code>LOB</code>. In Oracle mode, the <code>LOB</code> type does not support <code>=</code> comparison, so it cannot be converted.</li>
+      <li><code>pattern</code> is not of the fixed-length <code>char</code> or <code>nchar</code> type.</li>
+     </ul></p>
+</main>
 
-In the following example, the first four letters of the employee name are "ALLE" and the last letter is any character. 
+In the following example, the first four letters of the employee name are `ALLE` and the last letter is any character. 
 
 ```sql
 obclient> SELECT empname, deptno FROM emp WHERE empname LIKE 'ALLE_';
@@ -242,7 +253,7 @@ obclient> SELECT empname, deptno FROM emp WHERE empname LIKE 'ALLE_';
 1 row in set
 ```
 
-In the following example, the first letter of the employee name is "A". 
+In the following example, the first letter of the employee name is `A`. 
 
 ```sql
 obclient> SELECT empname, deptno FROM emp WHERE empname LIKE 'A%';
@@ -254,9 +265,10 @@ obclient> SELECT empname, deptno FROM emp WHERE empname LIKE 'A%';
 1 row in set
 ```
 
-> **Notice**
->
-> If the database character set is ASCII, one Chinese character needs two underscores (`_`); if the database character set uses GBK, one Chinese character needs only one underscore (`_`). 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>If the database character set is ASCII, one Chinese character needs two spaces (<code> </code>); if the database character set uses GBK, one Chinese character needs only one space (<code> </code>).</p>
+  </main>
 
 ## BETWEEN AND
 
@@ -267,9 +279,10 @@ SELECT column_name [,column_name...] FROM table_name WHERE
 [NOT] BETWEEN min_const_value AND max_const_value;
 ```
 
-> **Notice**
->
-> The bound values of an interval query cannot be exchanged because the values between them must be greater than or equal to the left value and less than or equal to the right value. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>The bound values of an interval query cannot be exchanged because the values between them must be greater than or equal to the left value and less than or equal to the right value.</p>
+  </main>
 
 Example:
 
@@ -293,10 +306,13 @@ SELECT column_name [,column_name...] FROM table_name WHERE
 column_name [NOT] IN (const_value,const_value,const_value...);
 ```
 
-> **Notice**
->
-> * The value types in the `[NOT] IN` set must be consistent or compatible with each other. 
-> * The values in the `[NOT] IN` set do not support wildcards. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <ul>
+    <li>The value types in the <code>[NOT] IN</code> set must be consistent or compatible with each other.</li>
+    <li>The values in the <code>[NOT] IN</code> set do not support wildcards.</li>
+    </ul>
+  </main>
 
 Example:
 
@@ -360,3 +376,6 @@ obclient> SELECT * FROM emp WHERE comm IS NOT NULL;
 +-------+---------+----------+------+-----------+------+------+--------+------+
 1 row in set
 ```
+## Releated topic
+
+For information about pattern-matching conditions, see [Pattern-matching conditions](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/6.pattern-matching-conditions-of-oracle-mode.md).
