--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
@@ -89,8 +89,8 @@ For more information about the `NLSSORT` function, see [NLSSORT](../../6.sql-syn
 obclient> CREATE TABLE tbl1(col NUMBER,col2 VARCHAR2(20));
 Query OK, 0 rows affected
 
-obclient> INSERT INTO tbl1 VALUES (1,'apple'),(2,'banana'),(3,'orange'),
-      (4,'watermelon'),(5,'grape'),(6,'tomato');
+obclient> INSERT INTO tbl1 VALUES(1,'苹果'),(2,'香蕉'),(3,'橘子'),
+      (4,'西瓜'),(5,'葡萄'),(6,'西红柿');
 Query OK, 6 rows affected
 Records: 6  Duplicates: 0  Warnings: 0
 
@@ -98,12 +98,12 @@ obclient> SELECT * FROM tbl1;
 +------+-----------+
 | COL  | COL2      |
 +------+-----------+
-|    1 | apple     |
-|    2 | banana    |
-|    3 | orange    |
-|    4 | watermelon|
-|    5 | grape     |
-|    6 | tomato    |
+|    1 | 苹果      |
+|    2 | 香蕉      |
+|    3 | 橘子      |
+|    4 | 西瓜      |
+|    5 | 葡萄      |
+|    6 | 西红柿    |
 +------+-----------+
 6 rows in set
 
@@ -112,12 +112,12 @@ obclient> SELECT * FROM tbl1 ORDER BY NLSSORT(col2,'NLS_SORT=UCA0900_SCHINESE_PI
 +------+-----------+
 | COL  | COL2      |
 +------+-----------+
-|    3 | orange    |
-|    1 | apple     |
-|    5 | grape     |
-|    4 | watermelon|
-|    6 | tomato    |
-|    2 | banana    |
+|    3 | 橘子      |
+|    1 | 苹果      |
+|    5 | 葡萄      |
+|    4 | 西瓜      |
+|    6 | 西红柿    |
+|    2 | 香蕉      |
 +------+-----------+
 6 rows in set
 ```
