--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/5.hikaricp-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/5.hikaricp-connection-pool-configuration-example-of-oracle-mode.md
@@ -7,16 +7,16 @@ This topic provides a configuration example of a HiKariCP connection pool.
 Content of the `pom.xml` file:
 
 ```xml
-  <dependency>
+    <dependency>
             <groupId>com.alipay.oceanbase</groupId>
             <artifactId>oceanbase-client</artifactId>
-            <version>3.2.3</version>
+            <version>2.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>3.3.1</version>
-        </dependency>
+    </dependency>
 ```
 
 ## Configuration files
@@ -26,7 +26,7 @@ Content of the `jdbc.properties` file:
 ```dart
 jdbcUrl=jdbc:oceanbase://10.100.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=true&serverTimezone=UTC
 username=admin@oracle
-password=admin
+password=******
 dataSource.cachePrepStmts=true
 dataSource.prepStmtCacheSize=250
 dataSource.prepStmtCacheSqlLimit=2048
