--- a/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
@@ -6,11 +6,11 @@ After you insert data into a table, you can use the `UPDATE` statement to update
 
 Before you update data, make sure that:
 
-* You have logged on to an Oracle tenant of OceanBase Database. For more information, see [Connect to the database](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md).
+* You have logged on to an Oracle tenant of OceanBase Database. For more information, see [Connect to OceanBase Database](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md).
 
-<main id="notice" type='explain'>
+  <main id="notice" type='explain'>
    <h4>Note</h4>
-   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the sys tenant for the mode of the tenant that you have logged on to.<code></code>  </p>
+   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the <code>sys</code> tenant for the mode of the tenant that you have logged on to.</p>
   </main>
 
 * You have the `UPDATE` privilege on the target table. For more information about how to view the privileges of the current user, see [View user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md). If you do not have the required privileges, request the administrator to grant the privileges. For more information, see [Modify user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md).
@@ -19,7 +19,7 @@ Before you update data, make sure that:
 
 Generally, the [UPDATE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/6.update-of-oracle-mode.md) statement is used to update the data of a table.
 
-`Syntax`:
+Syntax:
 
 ```sql
 UPDATE table_name
@@ -163,7 +163,7 @@ obclient> SELECT * FROM t2@ob_dblink;
 1 rows in set
 ```
 
-## References
+## Related topics
 
 * [Insert data](1.insert-data-of-oracle-mode.md)
 
@@ -171,4 +171,4 @@ obclient> SELECT * FROM t2@ob_dblink;
 
 * [Replace data](4.replace-data-of-oracle-mode.md)
 
-* [Modify data in the remote database by using DBLink](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
+* [Use a DBLink to modify data in a remote database](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
