--- a/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
@@ -6,11 +6,11 @@ You can use the `MERGE INTO` statement to insert records to or update records in
 
 Before you insert data, make sure that:
 
-* You have logged on to an Oracle tenant of OceanBase Database. For more information, see [Connect to the database](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md).
+* You have logged on to an Oracle tenant of OceanBase Database. For more information, see [Connect to OceanBase Database](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md).
 
-<main id="notice" type='explain'>
+  <main id="notice" type='explain'>
    <h4>Note</h4>
-   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the sys tenant for the mode of the tenant that you have logged on to.<code></code>  </p>
+   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the <code>sys</code> tenant for the mode of the tenant that you have logged on to.</p>
   </main>
 
 * You have the `SELECT` object privilege on the source table, and the `INSERT` and `UPDATE` privileges on the destination table. For more information about how to view the privileges of the current user, see [View user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md). If you do not have the required privileges, request the administrator to grant the privileges. For more information, see [Modify user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md).
@@ -38,7 +38,7 @@ WHEN NOT MATCHED THEN
 | MERGE INTO table_name alias1 | Yes | The name and alias of the table into which data is to be inserted.  |
 | USING (table\|view\|sub_query) alias2 | Yes | The source table (view, subquery) and its alias.  |
 | ON (join condition) | No | The judgment condition.  |
-| WHEN MATCHED THEN UPDATE table_name SET col1 = col_val1 , col2 = col2_val | Yes | Specifies to execute the UPDATE statement when the specified condition is matched.  |
+| WHEN MATCHED THEN UPDATE table_name SET col1 = col_val1,col2 = col2_val | Yes | Specifies to execute the UPDATE statement when the specified condition is matched.  |
 | WHEN NOT MATCHED THEN INSERT (column_list)  VALUES (column_values); | Yes | Specifies to execute the INSERT statement when the specified condition is not matched.  |
 
 When you use the `MERGE INTO` statement to replace data, if the records in the source table do not exist in the destination table, these records are inserted into the destination table; if the records in the source table exist in the destination table, these records are updated in the destination table.
@@ -227,7 +227,7 @@ obclient> SELECT * FROM t3@orcl_dblink;
 4 row in set
 ```
 
-## References
+## Related topics
 
 * [Insert data](1.insert-data-of-oracle-mode.md)
 
@@ -235,4 +235,4 @@ obclient> SELECT * FROM t3@orcl_dblink;
 
 * [Delete data](3.delete-data-of-oracle-mode.md)
 
-* [Modify data in the remote database by using DBLink](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
+* [Use a DBLink to modify data in a remote database](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
