--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -47,19 +47,19 @@
 
 | 角色           | 机器           | 备注                 |
 |----------------|--------------|-----------------------|
-| OBD            | 10.10.10.4 | 中控机，自动化部署软件    |
+| OBD            | 10.10.10.4 | 安装在中控机上的自动化部署软件    |
 | OBServer 节点  | 10.10.10.1 | OceanBase 数据库 Zone1   |
 | OBServer 节点  | 10.10.10.2 | OceanBase 数据库 Zone2   |
 | OBServer 节点  | 10.10.10.3 | OceanBase 数据库 Zone3   |
-| OBAgent        | 10.10.10.1、10.10.10.2、10.10.10.3 | OceanBase 监控工具   |
-| ODP            | 10.10.10.4 | OceanBase 访问反向代理   |
+| OBAgent        | 10.10.10.1、10.10.10.2、10.10.10.3 | OceanBase 数据库监控采集框架   |
+| ODP            | 10.10.10.4 | OceanBase 数据库专用的反向代理软件   |
 | OCP Express    | 10.10.10.4 | 基于 Web 的 OceanBase 数据库 4.x 管理工具      |
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <ul>
   <li>
-  <p>在生产环境下，推荐将 ODP 和应用部署在一台机器上，以 ODP 访问应用的时间。您可以在每个应用的服务器上部署一个 ODP 服务。在本例中，为了更方便介绍，将 ODP 单独部署。</p>
+  <p>在生产环境下，推荐将 ODP 和应用部署在一台机器上，以节省 ODP 访问应用的时间。您可以在每个应用的服务器上部署一个 ODP 服务。在本例中，为了更方便介绍，将 ODP 单独部署。</p>
   </li>
   <li>
   <p>部署 ODP 的机器使用的配置可以和部署 OceanBase 数据库的机器配置不一致。部署 ODP 最小只需 1C/1G 内存。</p>
