--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/1.access-path/2.rule-based-path-selection.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/1.access-path/2.rule-based-path-selection.md
@@ -195,7 +195,7 @@ obclient> (SELECT DISTINCT v1, v3 FROM skyline JOIN tmp WHERE skyline.v1 = tmp.c
 
 从执行计划可以看到，`ORDER BY` 被消除了，同时使用了 `MERGE DISTINCT`，`UNION` 也没有做 `SORT`。可以看到，从底层 `TABLE SCAN` 吐出来的序，可以被上层的算子使用。换句话说，保留 `idx_v1_v3_v5` 吐出来的行的顺序，可以让后面的算子在保序的情况下执行更优的操作。优化器在识别这些序的情况下，才能生成更优的执行计划。
 
-所以 Skyline 剪枝对 Interesting Order 的判断，需要充分考虑各个索引能够最大利用的序。例如上述示例中最大的序其实是 `(v1, v3)` 而不仅仅是 `v1`，它从 `MERGE JOIN` 吐出来的序 `(v1, v3)` 可以到 `MERGE DISINCT` 算子, 再到最后的 `UNISON DISTINCT` 算子。
+所以 Skyline 剪枝对 Interesting Order 的判断，需要充分考虑各个索引能够最大利用的序。例如上述示例中最大的序其实是 `(v1, v3)` 而不仅仅是 `v1`，它从 `MERGE JOIN` 吐出来的序 `(v1, v3)` 可以到 `MERGE DISINCT` 算子, 再到最后的 `UNION DISTINCT` 算子。
 
 ### Query Range  
 
