--- a/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/1.configure-internal-storage-encryption-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/1.configure-internal-storage-encryption-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 本节主要介绍如何创建加密表空间来对新创建的表实现透明加密。
 
-OceanBase 数据库的加密在形式上尽量兼容 Oracle 数据库，数据的加密单位为表空间（Tablespace）。OceanBase 数据库并非一个多数据文件的数据库系统，表空间是为了兼容而设计的概念，可以简单理解为表空间是一组表的集合。
+OceanBase 数据库的数据加密单位为表空间（Tablespace）。OceanBase 数据库并非一个多数据文件的数据库系统，表空间是为了兼容而设计的概念，可以简单理解为表空间是一组表的集合。
 
 本节以在加密表空间 `sectest_ts1` 上创建表 `t1` 为例，提供透明加密的操作指导。
 
